interview mdx file

--- a/src/app/blog/frontend-developer-preparation/page.mdx
+++ b/src/app/blog/frontend-developer-preparation/page.mdx
@@ -1,3 +1,96 @@
+# Frontend Developer Interview Questions and Answers
+
+1. **What is HTML?**
+
+- Html stands for HyperText Markup language used to create and design web pages and its content.
+
+2. **What is the difference between HTML and XHTML?**
+
+- Xhtml is stricter version of html and it is stricter in terms of syntax and elements.
+
+3. **What HTML tags ?**
+
+- Html tags are used to define the structure of web pages and its content.
+
+4. **What is the role of Doctype in HTML?**
+
+- The doctype(Document Type) declaration specifies the version of html used in the document.
+- It tells the browser which version of html it is and how to interpret the code.
+
+`<DOCTYPE html> -- version 5`
+
+5. **What are Meta tags? what are 5 types of meta tags**
+
+- Meta tags are used to provide metadata or additional information about the document.
+  5 types :
+- charset(character Encoding):helps browsers to interpret the different characters in the documents
+  `<meta charset="UTF-8">` attributes ensures that the browser interprets the document correctly.
+- viewport(viewport):helps browsers to adjust the page to fit the screen size (creating responsive web design).
+  `<meta name="viewport" content ="width=device-width, initial-scale=1.0">`
+- description(Description):helps browsers to display a description of the document.Search engine may use this for search result.
+  `<meta name="description" content="Interview preparation">`
+- keywords(Keywords):helps browsers to display relevant keywords for the document.
+  `<meta name="keywords" content="HTML, CSS, JavaScript">`
+- author(Author):helps browsers to display the author of the document.
+  `<meta name="author" content="Apsara">`
+
+6. **what is block and inline elements ?**
+
+- Block elements:
+  - They start on a new line and take up the full width available.
+  - They can contain other block elements and inline elements.
+  - They have a default width that is equal to the width of the parent container.
+  - Can set width and height for block elements.
+  - `<div>`,`<section>`,`<article>`,`<header>`,`<footer>` are some examples of block elements.
+- Inline elements:
+  - They do not start on a new line and only take up as much width as necessary.
+  - They can only contain other inline elements.
+  - They have a default width that is equal to the width of the content.
+  - Can't set width and height for inline elements.
+  - `<span>`,`<a>`,`<img>`,`<input>` are some examples of inline elements.
+
+7. **What is the difference between `<div>` and `<span>`?**
+
+- `<div>` is a block-level element and `<span>` is an inline element. -`<div>`is container used to group and structure the content on a webpage. -`<span>` is an inline container and is used to apply style or scripting a specific section of text ot content .
+
+8. ** what is semantic and non-semantic elements?**
+
+- Semantic elements:
+
+  - They provide meaning to the content and structure of the document.
+  - They are descriptive and convey the meaning of the content to both humans and machines.
+  - Examples: `<header>`,`<main>`,`<address>`,`<nav>`,`<article>`,`<section>`,`<footer>`
+
+- Non-semantic :
+  - They do not provide any meaning or structure to the content.
+  - They are used to provide structure to the document without any meaning.
+  - Examples: `<div>`,`<span>`,`<br>`,`<hr>`,`<img>`,`<table>`,`<input>`
+
+9. **What is the difference between Absolute and Relative URLs`?**
+
+Absolute URLs:
+
+- They are complete URLs that specify the location of a resource on the web.
+- They can be used to link to any resource on the web.
+- They are useful for linking to external resources.
+- They start with the protocol (e.g. `Absolute URLs:  URL_ADDRESS.example.com">`
+
+Relative URLs:
+
+- They are relative to the current URL.
+
+10. **What is the difference between `<img>` and `<iframe>`?**
+
+`<img>` is used to embed an image into a document.
+
+- They have a `src` attribute that specifies the URL of the image.
+- They can have attributes like `width` and `height` to specify the size of the image.
+- They can have attributes like `alt` to provide alternative text for the image.
+  `<iframe>` is used to embed another document or webpage into the current document.
+- They have a `src` attribute that specifies the URL of the webpage.
+- They can have attributes like `width` and `height` to specify the size of the iframe.
+- They can have attributes like `sandbox` to restrict the content of the iframe.
+
 # HTML Multiple Choice Questions
 
 1. **What does HTML stand for?**
