mdx file for blogs

--- a/src/app/blog/frontend-developer-preparation/page.mdx
+++ b/src/app/blog/frontend-developer-preparation/page.mdx
@@ -401,7 +401,7 @@
 
 Certainly! Here are 30 multiple-choice questions (MCQs) and 5 coding tasks with questions, answers, and solutions for your React trainee examination:
 
-### Multiple Choice Questions (MCQs):
+### Multiple Choice Questions React basic (MCQs):
 
 1. **What is the purpose of React in web development?**
 
@@ -573,7 +573,7 @@ Certainly! Here are 30 multiple-choice questions (MCQs) and 5 coding tasks with 
 
 22. **Which of the following is a correct way to conditionally render components in React?**
 
-    - A) { condition ? <Component /> : null}
+    - A) {condition ? <Component /> : null}
     - B) {condition && <Component />}
     - C) {condition ? <Component /> : ''}
     - D) {condition ? <Component /> : undefined}
