error fixed for mdx files

--- a/src/app/blog/frontend-developer-preparation/page.mdx
+++ b/src/app/blog/frontend-developer-preparation/page.mdx
@@ -625,11 +625,11 @@ list items - B) To style list items individually - C) To group list items - D) T
     - **Answer: A) To create references to DOM elements**
 
 30. **Which of the following is NOT a valid way to define event handlers in React?**
-    - A) onClick={() => handleClick()}
-    - B) onClick={handleClick}
-    - C) onClick={this.handleClick}
-    - D) onClick={handleClick()}
-    - **Answer: D) onClick={handleClick()}**
+    - A) `onClick={() => handleClick()}`
+    - B) `onClick={handleClick}`
+    - C) `onClick={this.handleClick}`
+    - D) `onClick={handleClick()}`
+    - **Answer: D) `onClick={handleClick()}`**
 
 ### Coding Tasks:
 
